# SyncEvolution-syncevolution

./: configure-pre.in
src/: EvolutionCalendarSource.cpp  EvolutionCalendarSource.h  EvolutionContactSource.cpp  EvolutionMemoSource.cpp  EvolutionSyncClient.cpp  EvolutionSyncSource.h  Makefile-gen.am
src/backends/webdav/: NeonCXX.cpp  NeonCXX.h  WebDAVSource.cpp
src/core/: EvolutionSyncClient.h  Makefile.am  SyncEvolutionCmdline.cpp  SyncEvolutionCmdline.h  syncevolutionmodule.cpp
src/dbus/server/pim/: locale-factory-boost.cpp
src/syncevo/: SyncSource.cpp
src/syncevo/configs/datatypes/: 40raw-fieldlist.xml  41-raw-profile.xml  42-raw-types.xml
test/: compare.xsl  resultchecker.py  runtests.py
test/testcases/synctests/googlecontacts/eds_contact/testUpdateRemoteWins/: local-synced
